--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,6 +14,7 @@ $break-laptop: 1279px;
 $break-laptop-small: 1159px;
 $break-tablet-big: 1023px;
 $break-tablet-small: 767px;
+$break-phone-huge-min: 551px;
 $break-phone-huge: 550px;
 $break-phone-big: 419px;
 
